# ofono-mtk-binder-plugin

./: autogen.sh  configure.ac
rpm/: ofono-mtk-binder-plugin.spec
src/: Makefile.am  mtk-binder-plugin.c  mtk-binder-plugin.h
